Automake 1.9 won't have the AC_PROG_EGREP bug (aclocal used to pull an old installed libtool.m4 as well as the bootstrap m4/libtool.m4 if an AC_DEFUN was removed), and we have lt~obsolete.m4 to work around it in the mean time.  libtoolize can install macro files from $prefix/share/aclocal perfectly well without us needing to move to a whole other directory:
* Makefile.am (pkgmacro_DATA): Renamed to aclocal_DATA, so m4
files are installed to $prefix/share/aclocal again.
(install-data-local): Don't remove just installed macros!
* libtoolize.in (pkgmacrodir): Renamed to aclocaldir.
(func_copy_some_files): New function factored out of...
(func_copy_all_files): ...here.  Adjust to use func_copy_some_files.
(re_pkgaux_files): Renamed to glob_pkgaux_files, since it is not
a regular expression.
(re_pkgmagro_files): Replaced with...
(pkgmacro_files): ...a colon delimited list of libtool installed
m4 files from aclocaldir.
(Main): Copy macro files from aclocaldir again.
* NEWS: Updated.

--- a/Makefile.am
+++ b/Makefile.am
@@ -35,14 +35,15 @@ dist_pkgdata_DATA = config/config.guess config/config.sub config/ltmain.sh
 
 # Everything that gets picked up by aclocal is automatically distributed,
 # this is the list of macro files we install on the user's system.
-pkgmacrodir = $(pkgdatadir)/m4
-pkgmacro_DATA = m4/argz.m4 m4/libtool.m4 m4/ltdl.m4 \
+# NOTE: Ensure that PKGMACRO_FILES in libtoolize.in is updated if you
+#       change the contents of aclocal_DATA:
+aclocal_DATA = m4/argz.m4 m4/libtool.m4 m4/ltdl.m4 \
 	m4/ltoptions.m4 m4/ltsugar.m4 m4/ltversion.m4
 
 # We build ltversion.m4 here, instead of from config.status,
-# because config.status is rerun each time one og configure's
+# because config.status is rerun each time one of configure's
 # dependencies change and ltversion.m4 happens to be a configure
-# dependency.  configure and ltversion.m4 vould be rebuilt in
+# dependency.  configure and ltversion.m4 would be rebuilt in
 # a loop otherwise.
 # Use `$(top_srcdir)/m4' for the benefit of non-GNU makes: this is
 # how ltversion.m4 appears in our dependencies.
@@ -86,9 +87,6 @@ configure-subdirs distdir: $(DIST_MAKEFILE_LIST)
 install-data-local:
 ## Don't install over the top of an old pkgdatadir
 	-rm -rf $(DESTDIR)$(pkgdatadir)
-## Remove old macro definitions
-	-rm -rf $(DESTDIR)$(aclocaldir)/ltdl.m4
-	-rm -rf $(DESTDIR)$(aclocaldir)/libtool.m4
 
 install-data-hook:
 	chmod +x $(DESTDIR)$(pkgdatadir)/config.guess
