This pervasive changeset makes two intertwined deep changes to the operation of libtool (neither would work alone).  First, there is a new feature that allows libraries to preopen modules.  This entails a backwards incompatible change to the libltdl API for separating out the preloaded symbol lists by owner.  Second, in the tradition of "eating our own dogfood", libltdl now preloads its own dlloaders.  The internal API for dlloaders has also had to change in a backwards incompatible way in support of the new library preloading feature.  If you don't use preloaded libraries, you needn't change your project sources, though you will need to recompile against the new libltdl.  The API changes are mostly confined to dlloaders, so you probably needn't worry about those (unless you have written a custom loader that you want libltdl to use):
* configure.ac (AC_CONFIG_FILES): Add libltdl/loaders/Makefile.
* libltdl/configure.ac (AC_CONFIG_FILES): Add loaders/Makefile.
* libltdl/loaders: New directory for module loaders, to simplify
Makefile rules, and to give the loaders themselves names that are
unique in the first few characters.
* libtoolize.in (func_copy_all_files): Copy recursively to pick up
the loaders directory contents.
* libltdl/loaders/Makefile.am: New file.  Move module building
rules to here...
* libltdl/Makefile.am: ...from here.
(VERSION_INFO): Bumped version info to signify interface changes.
(libltdl_la_CPPFLAGS, libltdlc_la_CPPFLAGS): Set LTDLOPEN
appropriately for each library.
* libltdl/loader-dld_link.c, libltdl/loader-dlopen.c,
libltdl/loader-dyld.c, libltdl/loader-load_add_on.c,
libltdl/loader-loadlibrary.c libltdl/loader-preopen.c,
libltdl/loader-shl_load.c: Moved from here...
* libltdl/loaders/dld_link.c, libltdl/loaders/dlopen.c,
libltdl/loaders/dyld.c, libltdl/loaders/load_add_on.c,
libltdl/loaders/loadlibrary.c libltdl/loaders/preopen.c,
libltdl/loaders/shl_load.c: ...to here.
(get_vtable): New entry function for each.
* libltdl/loaders/preopen.c 

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -17,50 +17,60 @@
 ## the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 ## Boston, MA 02111-1307, USA.
 
-BUILT_SOURCES =
-MOSTLYCLEANFILES =
-EXTRA_DIST =
+SUBDIRS			= loaders .
 
-AUTOMAKE_OPTIONS = foreign
-ACLOCAL_AMFLAGS  = -I m4
-AM_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir)
-DEFS = -DHAVE_CONFIG_H="<$(CONFIG_H)>" -DLTDL
+BUILT_SOURCES		=
+MOSTLYCLEANFILES	=
+EXTRA_DIST		=
 
-pkgincludedir = $(includedir)/libltdl
+AUTOMAKE_OPTIONS	= foreign
+ACLOCAL_AMFLAGS		= -I m4
 
+DEFS			= -DHAVE_CONFIG_H="<$(CONFIG_H)>" -DLTDL
+AM_CPPFLAGS		= -I$(top_builddir)/.. -I$(top_srcdir)/..
+AM_LDFLAGS		= -no-undefined
+VERSION_INFO		= -version-info 6:0:0
+
+pkgincludedir		= $(includedir)/libltdl
+
+lib_LTLIBRARIES		= libdlloader.la
+libdlloader_la_SOURCES  = lt_error.h lt_error.c \
+			  lt__private.h lt_dlloader.h \
+			  lt__alloc.h lt__alloc.c \
+			  lt__glibc.h lt_system.h
+libdlloader_la_LDFLAGS	= $(VERSION_INFO)
+libdlloader_la_LIBADD	= $(LTLIBOBJS)
+
+## Libltdl brings it all together:
 if INSTALL_LTDL
-include_HEADERS = ltdl.h
-pkginclude_HEADERS = lt_system.h lt_error.h
-lib_LTLIBRARIES = libltdl.la
+include_HEADERS		= ltdl.h
+pkginclude_HEADERS	= lt_system.h lt_error.h
+lib_LTLIBRARIES		+= libltdl.la
 endif
 
 if CONVENIENCE_LTDL
-noinst_LTLIBRARIES  = libltdlc.la
+noinst_LTLIBRARIES	= libltdlc.la
 endif
 
-## Make sure these will be cleaned even when they're not built by
-## default.
-CLEANFILES	    = libltdl.la libltdlc.la
+libltdl_la_SOURCES	= ltdl.h ltdl.c loaders/preopen.c
+libltdl_la_CPPFLAGS	= -DLTDLOPEN=libltdl $(AM_CPPFLAGS)
+libltdl_la_LDFLAGS	=  $(VERSION_INFO) $(LT_DLPREOPEN)
+libltdl_la_LIBADD	= libdlloader.la
 
-libltdl_la_SOURCES  = loader-preopen.c \
-		      lt__alloc.c lt__alloc.h lt__dirent.h lt__glibc.h \
-		      lt__private.h lt_dlloader.h \
-		      lt_error.c lt_error.h lt_system.h \
-		      ltdl.c ltdl.h
-libltdl_la_LDFLAGS  = -no-undefined -version-info 5:0:2
-libltdl_la_LIBADD   = $(LIBADD_DL) $(LTLIBOBJS)
-
-libltdlc_la_SOURCES = $(libltdl_la_SOURCES)
-libltdlc_la_LIBADD  = $(LIBADD_DL) $(LTLIBOBJS)
+libltdlc_la_SOURCES	= $(libltdl_la_SOURCES)
+libltdlc_la_CPPFLAGS	= -DLTDLOPEN=libltdlc $(AM_CPPFLAGS)
+libltdlc_la_LDFLAGS	= $(LT_DLPREOPEN)
+libltdlc_la_LIBADD	=  $(libdlloader_la_OBJECTS) $(libdlloader_la_LIBADD)
 
 ## These are installed as a subdirectory of pkgdatadir so that
 ## libtoolize --ltdl can find them later:
-ltdldatadir = $(pkgdatadir)/libltdl
-ltdldata_DATA = COPYING.LIB Makefile.am README configure.ac \
-		argz_.h argz.c $(libltdl_la_SOURCES) \
-		loader-dld_link.c loader-dlopen.c loader-dyld.c \
-		loader-load_add_on.c loader-loadlibrary.c loader-shl_load.c \
-		lt__dirent.c
+ltdldatadir		= $(pkgdatadir)/libltdl
+nobase_ltdldata_DATA	= COPYING.LIB Makefile.am README configure.ac \
+			  $(libltdl_la_SOURCES) $(libdlloader_la_SOURCES) \
+			  lt__dirent.c lt__dirent.h argz_.h argz.c
+
+## Make sure these will be cleaned even when they're not built by default:
+CLEANFILES		= libltdl.la libltdlc.la libdlloader.la
 
 
 ## --------------------------- ##
