--- a/libtoolize.in
+++ b/libtoolize.in
@@ -314,33 +314,58 @@ func_copy ()
     return $my_return_status
 }
 
-# func_copy_all_files srcdir destdir [glob_exclude] [copy_cb=func_copy]
+# func_copy_all_files [-r] srcdir destdir [glob_exclude] [copy_cb=func_copy]
 # For each file in SRCDIR, then try to copy the file to DESTDIR by calling
-# COPY_CB with the src and dest files.  If GLOB_EXCLUDE is given, exclude
-# any matching filenames from the copy.  If COPY_CB is passed, then the
-# check for overwriting without opt_force is the callbacks responsibility:
-# This allows using callbacks like func_serial_update, which perform their
-# own checks to decide whether to overwrite the dest file.
+# COPY_CB with the src and dest files.  With the `-r' option, recurse into
+# subdirectories of srcdir too.  If GLOB_EXCLUDE is given, exclude any
+# matching filenames from the copy.  If COPY_CB is passed, then the check
+# for overwriting without opt_force is the callbacks responsibility:  This
+# allows using callbacks like func_serial_update, which perform their own
+# checks to decide whether to overwrite the dest file.
 func_copy_all_files ()
 {
+    my_opt_recurse=false
+    if test "X$1" = X-r; then
+      my_opt_recurse=:
+      shift
+    fi
+
     my_srcdir="$1"
     my_destdir="$2"
     my_glob_exclude="$3"
     my_copy_cb="${4-func_copy}"
 
     my_srcfiles=
-    for my_filename in `cd "$my_srcdir" && ls`; do
+    my_basedir="$my_srcdir"
+    my_srcdirs="$my_srcdir"
+    my_save_IFS="$IFS"
+    IFS=:
+    while test -n "$my_srcdirs"; do
 
-      # ignore excluded filenames
-      if test -n "$my_glob_exclude"; then
-        eval 'case $my_filename in '$my_glob_exclude') continue ;; esac'
-      fi
+      IFS="$my_save_IFS"
+      my_srcdir=`echo "$my_srcdirs" | sed 's,:.*,,g'`
+      my_srcdirs=`echo "$my_srcdirs" | sed 's,:*[^:][^:]*:*,,'`
 
-      my_srcfiles="$my_srcfiles${my_srcfiles:+:}$my_filename"
+      for my_filename in `cd "$my_srcdir" && ls`; do
 
+        # ignore excluded filenames
+        if test -n "$my_glob_exclude"; then
+          eval 'case $my_filename in '$my_glob_exclude') continue ;; esac'
+        fi
+
+	# Add to the appropriate list
+	if test -f "$my_srcdir/$my_filename"; then
+	  my_srcfile=`echo "$my_srcdir/$my_filename" |sed "s,^$my_basedir/*,,"`
+	  my_srcfiles="$my_srcfiles${my_srcfiles:+:}$my_srcfile"
+	elif $my_opt_recurse && test -d "$my_srcdir/$my_filename"; then
+	  my_srcdirs="$my_srcdirs${my_srcdirs:+:}$my_srcdir/$my_filename"
+	fi
+
+      done
     done
+    IFS="$my_save_IFS"
 
-    func_copy_some_files "$my_srcdir" "$my_srcfiles" \
+    func_copy_some_files "$my_basedir" "$my_srcfiles" \
       "$my_destdir" "$my_copy_cb"
 }
 
@@ -693,7 +718,7 @@ func_config_update ()
   # Copy all the files from installed libltdl to this project, if the
   # user specified `--ltdl'.
   if test -n "$ltdldir"; then
-    eval func_copy_all_files "$pkgdatadir/libltdl" "$ltdldir"
+    eval func_copy_all_files -r "$pkgdatadir/libltdl" "$ltdldir"
 
     # libtoolize the newly copied libltdl tree
     ( cd "$ltdldir" && "$progpath" $libtoolize_flags ) || exit $EXIT_FAILURE
