Split lt_dlloader management into a separate file, and factor `loaders' list management into a new SList ADT.  In the process, the API for writing loaders is a little cleaner, so all the existing loaders were tweaked to take advantage of that:
* libltdl/slist.h, libltdl/slist.c: New files implementing a
generic singly linked list container ADT.  The ADT is purely
internal, and none of its API's are visible from an installed
libltdl.
* libltdl/lt_dlloader.h (lt_dlloader): Removed next field again
:-) Renamed to lt_dlvtable for API.  Changed all callers.
(lt_dlloader_get): New function to turn an lt_dlloader into its
associated lt_dlvtable.
(lt_dlloader_add): Removed unused data parameter.  The caller
data belongs to (and is set by) the loader itself, not the
loader's client.  Changed all callers.
(lt_dlloader_name, lt_dlloader_data): Removed.  Use
lt_dlloader_get instead!
* libltdl/lt__private.h: Include slist.h.
(lt__alloc_die_callback): Add missing LT_SCOPE to declaration.
(lt_dlhandle_struct): Use lt_dlvtable instead of opaque
lt_dlloader.
* libltdl/ltdl.c (lt_dlexit): Rewritten for the new loader API.
(loaders, lt_dlloader_add, lt_dlloader_remove, lt_dlloader_next,
lt_dlloader_find): Moved from here...
* libltdl/lt_dlloader.c ((loaders, lt_dlloader_add,
lt_dlloader_remove, lt_dlloader_next, lt_dlloader_find): ...to
here.  And rewritten in terms of new SList interface.
* libltdl/ltdl.c (lt_dlexit, tryall_dlopen): Rewritten in terms of
new lt_dlloader interface.
* libltdl/Makefile.am (libdlloader_la_SOURCES): Add slist.h and
slist.c.  Move lt_dlloader.h from here...
(pkginclude_HEADERS): ...to here.
(libltdl_la_SOURCES): Add lt_dlloader.c and lt_dlloader.h.

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -35,16 +35,17 @@ pkgincludedir		= $(includedir)/libltdl
 
 lib_LTLIBRARIES		= libdlloader.la
 libdlloader_la_SOURCES  = lt_error.h lt_error.c \
-			  lt__private.h lt_dlloader.h \
+			  lt__private.h lt_system.h \
 			  lt__alloc.h lt__alloc.c \
-			  lt__glibc.h lt_system.h
+			  lt__glibc.h \
+			  slist.h slist.c
 libdlloader_la_LDFLAGS	= $(VERSION_INFO)
 libdlloader_la_LIBADD	= $(LTLIBOBJS)
 
 ## Libltdl brings it all together:
 if INSTALL_LTDL
 include_HEADERS		= ltdl.h
-pkginclude_HEADERS	= lt_system.h lt_error.h
+pkginclude_HEADERS	= lt_system.h lt_error.h lt_dlloader.h
 lib_LTLIBRARIES		+= libltdl.la
 endif
 
@@ -52,7 +53,8 @@ if CONVENIENCE_LTDL
 noinst_LTLIBRARIES	= libltdlc.la
 endif
 
-libltdl_la_SOURCES	= ltdl.h ltdl.c loaders/preopen.c
+libltdl_la_SOURCES	= ltdl.h ltdl.c \
+			  lt_dlloader.h lt_dlloader.c loaders/preopen.c
 libltdl_la_CPPFLAGS	= -DLTDLOPEN=libltdl $(AM_CPPFLAGS)
 libltdl_la_LDFLAGS	=  $(VERSION_INFO) $(LT_DLPREOPEN)
 libltdl_la_LIBADD	= libdlloader.la
