This change fixes another VPATH build bug, where the vcl.tmp target forced a rebuild of stamp-vcl in the build tree (and hence regeneration of m4/ltversion.m4, thus an automake driven rebootstrap that doesn't know about $fakes) requiring a fresh ./bootstrap after every cvs/tla update:
* Makefile.am (vcl.tmp): Removed.
(stamp-vcl): Adopt former vcl.tmp target rules.

--- a/Makefile.am
+++ b/Makefile.am
@@ -67,8 +67,7 @@ bin_SCRIPTS = libtool libtoolize
 ## at the top of this rule takes care of prefering the right one on
 ## subsequent runs.
 MKSTAMP = $(SHELL) $(top_srcdir)/config/mkstamp
-stamp-vcl: vcl.tmp $(top_srcdir)/ChangeLog
-vcl.tmp:
+stamp-vcl: $(top_srcdir)/ChangeLog
 	@dir=.; test -f $$dir/stamp-vcl || dir=$(srcdir); \
 	set `$(MKSTAMP) < $(top_srcdir)/ChangeLog`; \
 	echo "$$1" > vcl.tmp; \
