--- a/libtoolize.in
+++ b/libtoolize.in
@@ -47,6 +47,19 @@
 #
 # Report bugs to <bug-libtool@gnu.org>.
 
+# Be Bourne compatible
+if test -n "${ZSH_VERSION+set}" && (emulate sh) >/dev/null 2>&1; then
+  emulate sh
+  NULLCMD=:
+  # Zsh 3.x and 4.x performs word splitting on ${1+"$@"}, which
+  # is contrary to our usage.  Disable this feature.
+  alias -g '${1+"$@"}'='"$@"'
+  setopt NO_GLOB_SUBST
+elif test -n "${BASH_VERSION+set}${KSH_VERSION+set}" && (set -o posix) >/dev/null 2>&1; then
+  set -o posix
+fi
+DUALCASE=1; export DUALCASE # for MKS sh
+
 : ${CP="cp -f"}
 : ${LN_S="@LN_S@"}
 : ${MKDIR="mkdir"}
