--- a/ltmain.in
+++ b/ltmain.in
@@ -5176,6 +5176,8 @@ EOF
 Xsed='${SED} -e 1s/^X//'
 sed_quote_subst='$sed_quote_subst'
 
+# The HP-UX ksh and POSIX shell print the target directory to stdout
+# if CDPATH is set.
 (unset CDPATH) >/dev/null 2>&1 && unset CDPATH
 
 relink_command=\"$relink_command\"
